Last changes before finishing
too many things :D